Fixed text, so it doesn't overlap on different resolutions

--- a/app/globals.css
+++ b/app/globals.css
@@ -200,7 +200,7 @@ body {
 .insurance-text-container {
     position: relative;
     rotate: 180deg;
-    top: -35%;
+    top: -7vw;
 }
  
 .insurance-text {
@@ -212,7 +212,7 @@ body {
 
 .dealer-info-container {
     position: relative;
-    top: -30%;
+    top: -17vw;
 }
 
 .dealer-info {
